Use request model. use new url
