# server/swagger/static/api.json
@@ -107,6 +107,10 @@
         ],
         "type": "object",
         "properties": {
+          "job_id": {
+            "title": "Job Id",
+            "type": "string"
+          },
           "prompt": {
             "title": "Prompt",
             "anyOf": [
@@ -261,7 +265,6 @@
         "required": [
           "job_id",
           "status",
-          "timestamp",
           "description"
         ],
         "type": "object",
